add GetComputerChoice() function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script> src="rock.js"</script>
+    <script src="rock.js"> </script>
 </body>
 </html>
